# hackathon-pln

./: .gitignore  README.md
bot/: ingest.py  latinfo.py  main.py  rag.py  requirements.txt  shield.py
docs/: DOCUMENTACION_TECNICA.docx  DOCUMENTACION_TECNICA.md  link_proteccion_datos_personales.txt
sunat-scraper/: .env.example  .gitignore  README.md  pyproject.toml
sunat-scraper/config/: sources.yaml
sunat-scraper/data/processed/: chunks.jsonl  documents.jsonl  faqs.jsonl  rejected.jsonl
sunat-scraper/data/raw/: discovery.json  excluded_urls.jsonl  urls.jsonl
sunat-scraper/src/sunat_scraper/: __init__.py  __main__.py  chunker.py  classifier.py  cli.py  config.py  downloader.py  exporter.py  extractor.py  filters.py  ruc_provider.py  sitemap.py
sunat-scraper/tests/: conftest.py  test_chunker.py  test_classifier.py  test_exporter.py  test_extractor.py  test_filters.py  test_sitemap.py
sunat-scraper/tests/fixtures/: pagina_corta.html  pagina_faq.html  pagina_normal.html  pagina_pasos.html  pagina_solo_pdf.html  pagina_tabla_compleja.html  rss.xml  sitemap_anidado.xml  sitemap_child_1.xml  sitemap_child_2.xml  sitemap_index.xml  sitemap_simple.xml
tupa_rag_pipeline_code/: README.md  postprocess_tupa_rag.py  relacionTupa-2018.xls  requirements.txt  run_pipeline.bat  run_pipeline.sh  tupa_consolidado.doc  tupa_pipeline.py
tupa_rag_pipeline_code/output_tupa/: chunks.jsonl  debug_extracted_rows.jsonl  index_catalog.json  preview.md  procedures.jsonl  quality_report.json
tupa_rag_pipeline_code/output_tupa/converted/: relacionTupa-2018.xlsx  (+1 more)
(+6 files in other folders)
