[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sunat-scraper"
version = "0.1.0"
description = "Scraper de contenido oficial HTML de SUNAT para un corpus RAG tributario peruano"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "trafilatura>=1.12",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "tenacity>=8.2",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sunat-scraper = "sunat_scraper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
